🤡 god: fix routes names, fix route getAll return value, fix little bugs
