# docs/swagger.yaml
@@ -14,6 +14,26 @@ definitions:
       token_type:
         type: string
     type: object
+  collection.CollectionRequest:
+    properties:
+      filters:
+        additionalProperties: {}
+        type: object
+      name:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  collection.CollectionResponse:
+    properties:
+      filters:
+        additionalProperties: {}
+        type: object
+      name:
+        type: string
+      user_id:
+        type: integer
+    type: object
   field.FieldRequest:
     properties:
       name:
@@ -122,39 +142,6 @@ info:
   title: MediaDex API
   version: "1.0"
 paths:
-  /User/{id}:
-    get:
-      description: Retrieves a specific User from the database by its ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/user.UserResponse'
-        "404":
-          description: User not found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Failed to find specific User !
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Get User by ID
-      tags:
-      - User
   /auth/login:
     post:
       consumes:
@@ -239,7 +226,178 @@ paths:
       summary: User register
       tags:
       - authentication
-  /field:
+  /collections:
+    get:
+      description: Retrieve all collection
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/collection.CollectionResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all collection
+      tags:
+      - Collections
+    post:
+      consumes:
+      - application/json
+      description: Creates a new Collection entry in the database
+      parameters:
+      - description: Collection creation payload
+        in: body
+        name: collection
+        required: true
+        schema:
+          $ref: '#/definitions/collection.CollectionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/collection.CollectionResponse'
+        "400":
+          description: Invalid Collection POST request payload !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to create Collection !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create a new Collection
+      tags:
+      - Collections
+  /collections/{id}:
+    delete:
+      description: Deletes a collection from the database by its ID
+      parameters:
+      - description: Collection ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Collection deleted successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Collection not found !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to delete Collection !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete a collection
+      tags:
+      - Collections
+    get:
+      description: Retrieves a specific collection from the database by its ID
+      parameters:
+      - description: collection ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/collection.CollectionResponse'
+        "404":
+          description: Collection not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to find specific Collection !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get collection by ID
+      tags:
+      - Collections
+    patch:
+      consumes:
+      - application/json
+      description: Update an existing collection
+      parameters:
+      - description: Collection ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated collection payload
+        in: body
+        name: collection
+        required: true
+        schema:
+          $ref: '#/definitions/collection.CollectionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/collection.CollectionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update a collection
+      tags:
+      - Collections
+  /fields:
     get:
       description: Retrieve all field
       produces:
@@ -297,7 +455,7 @@ paths:
       summary: Create a new Field
       tags:
       - Field
-  /field/{id}:
+  /fields/{id}:
     delete:
       description: Deletes a field from the database by its ID
       parameters:
@@ -581,7 +739,7 @@ paths:
       summary: Update a media
       tags:
       - Media
-  /mediaField:
+  /mediaFields:
     get:
       description: Retrieve all mediaField
       produces:
@@ -639,7 +797,7 @@ paths:
       summary: Create a new MediaField
       tags:
       - MediaField
-  /mediaField/{id}:
+  /mediaFields/{id}:
     delete:
       description: Deletes a mediaField from the database by its ID
       parameters:
@@ -752,7 +910,7 @@ paths:
       summary: Update a mediaField
       tags:
       - MediaField
-  /user:
+  /users:
     get:
       description: Retrieve all user
       produces:
@@ -810,7 +968,7 @@ paths:
       summary: Create a new User
       tags:
       - User
-  /user/{id}:
+  /users/{id}:
     delete:
       description: Deletes a user from the database by its ID
       parameters:
@@ -843,6 +1001,38 @@ paths:
       security:
       - BearerAuth: []
       summary: Delete a user
+      tags:
+      - User
+    get:
+      description: Retrieves a specific User from the database by its ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "404":
+          description: User not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to find specific User !
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get User by ID
       tags:
       - User
     patch:
