# pkg/collection/controller.go
@@ -1,12 +1,13 @@
 package collection
 
 import (
+	"encoding/json"
 	"mediadex/config"
 	"mediadex/database/dbmodel"
 	"net/http"
 	"strconv"
 
-	"github.com/go-chi/chi"
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
@@ -21,7 +22,7 @@ func New(config *config.Config) *CollectionConfig {
 // PostHandler godoc
 // @Summary      Create a new Collection
 // @Description  Creates a new Collection entry in the database
-// @Tags         Collection
+// @Tags         Collections
 // @Accept       json
 // @Produce      json
 // @Param        collection  body      CollectionRequest  true  "Collection creation payload"
@@ -29,7 +30,7 @@ func New(config *config.Config) *CollectionConfig {
 // @Success      200    {object}  CollectionResponse
 // @Failure      400    {object}  map[string]string  "Invalid Collection POST request payload !"
 // @Failure      500    {object}  map[string]string  "Failed to create Collection !"
-// @Router       /collection [post]
+// @Router       /collections [post]
 func (config *CollectionConfig) PostHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the request.
@@ -40,11 +41,15 @@ func (config *CollectionConfig) PostHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
+	filters, err := json.Marshal(req.Filters)
+	if err != nil {
+		render.JSON(w, r, map[string]string{"Error": "failed to parse filters value" + err.Error()})
+	}
 	// Convert the requested data into dbmodel.Collection type for the "Create" function.
 	collection := &dbmodel.Collection{
 		UserId:  req.UserId,
 		Name:    req.Name,
-		Filters: req.Filters,
+		Filters: filters,
 	}
 
 	// Request the DB to Create the Collection.
@@ -55,11 +60,17 @@ func (config *CollectionConfig) PostHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
+	var newFilters map[string]any
+	errUnmarshal := json.Unmarshal(savedCollection.Filters, newFilters)
+	if errUnmarshal != nil {
+		render.JSON(w, r, map[string]string{"Error": "failed to parse new filters value" + errUnmarshal.Error()})
+	}
+
 	// Set up to a dedicated type for the response.
 	res := &CollectionResponse{
 		UserId:  savedCollection.UserId,
 		Name:    savedCollection.Name,
-		Filters: savedCollection.Filters,
+		Filters: newFilters,
 	}
 
 	render.Status(r, http.StatusOK)
@@ -69,14 +80,14 @@ func (config *CollectionConfig) PostHandler(w http.ResponseWriter, r *http.Reque
 // GetByIdHandler godoc
 // @Summary      Get collection by ID
 // @Description  Retrieves a specific collection from the database by its ID
-// @Tags         Collection
+// @Tags         Collections
 // @Produce      json
 // @Param        id   path      string  true  "collection ID"
 // @Security     BearerAuth
 // @Success      200  {object}  CollectionResponse
 // @Failure      404  {object}  map[string]string  "Collection not found"
 // @Failure      500  {object}  map[string]string  "Failed to find specific Collection !"
-// @Router       /collection/{id} [get]
+// @Router       /collections/{id} [get]
 func (config *CollectionConfig) GetByIdHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
@@ -91,15 +102,21 @@ func (config *CollectionConfig) GetByIdHandler(w http.ResponseWriter, r *http.Re
 	collection, err := config.CollectionRepository.FindById(uint(id))
 	if err != nil {
 		render.Status(r, http.StatusNotFound)
-		render.JSON(w, r, map[string]string{"Error": "Failed to Find specific Collection !" + err.Error()})
+		render.JSON(w, r, map[string]string{"Error": "Failed to Find specific Collection ! " + err.Error()})
 		return
+	}
+
+	var newFilters map[string]any
+	errUnmarshal := json.Unmarshal(collection.Filters, newFilters)
+	if errUnmarshal != nil {
+		render.JSON(w, r, map[string]string{"Error": "failed to parse new filters value" + errUnmarshal.Error()})
 	}
 
 	// Set up to a dedicated type for the response
 	res := &CollectionResponse{
 		UserId:  collection.UserId,
 		Name:    collection.Name,
-		Filters: collection.Filters,
+		Filters: newFilters,
 	}
 
 	render.Status(r, http.StatusOK)
@@ -109,29 +126,47 @@ func (config *CollectionConfig) GetByIdHandler(w http.ResponseWriter, r *http.Re
 // GetAllHandler godoc
 // @Summary      Get all collection
 // @Description  Retrieve all collection
-// @Tags         Collection
+// @Tags         Collections
 // @Produce      json
 // @Security     BearerAuth
 // @Success      200  {array}   CollectionResponse
 // @Failure      500  {object}  map[string]string
-// @Router       /collection [get]
+// @Router       /collections [get]
 func (config *CollectionConfig) GetAllHandler(w http.ResponseWriter, r *http.Request) {
 
-	collection, err := config.CollectionRepository.FindAll()
+	collections, err := config.CollectionRepository.FindAll()
 	if err != nil {
 		render.Status(r, http.StatusInternalServerError)
 		render.JSON(w, r, map[string]string{"Error": "failed to fetch Collection !" + err.Error()})
 		return
 	}
 
+	var result []CollectionResponse
+
+	for _, collection := range collections {
+
+		var newFilters map[string]any
+		errUnmarshal := json.Unmarshal(collection.Filters, newFilters)
+		if errUnmarshal != nil {
+			render.JSON(w, r, map[string]string{"Error": "failed to parse filters value " + errUnmarshal.Error()})
+		}
+
+		res := CollectionResponse{
+			UserId:  collection.UserId,
+			Name:    collection.Name,
+			Filters: newFilters,
+		}
+		result = append(result, res)
+	}
+
 	render.Status(r, http.StatusOK)
-	render.JSON(w, r, collection)
+	render.JSON(w, r, result)
 }
 
 // UpdateHandler godoc
 // @Summary      Update a collection
 // @Description  Update an existing collection
-// @Tags         Collection
+// @Tags         Collections
 // @Accept       json
 // @Produce      json
 // @Param        id     path     string        true  "Collection ID"
@@ -141,7 +176,7 @@ func (config *CollectionConfig) GetAllHandler(w http.ResponseWriter, r *http.Req
 // @Failure      400   {object}  map[string]string
 // @Failure      404   {object}  map[string]string
 // @Failure      500   {object}  map[string]string
-// @Router       /collection/{id} [patch]
+// @Router       /collections/{id} [patch]
 func (config *CollectionConfig) UpdateHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
@@ -175,7 +210,11 @@ func (config *CollectionConfig) UpdateHandler(w http.ResponseWriter, r *http.Req
 		existing.Name = req.Name
 	}
 	if len(req.Filters) == 0 {
-		existing.Filters = req.Filters
+		filters, err := json.Marshal(req.Filters)
+		if err != nil {
+			render.JSON(w, r, map[string]string{"Error": "failed to parse filters value" + err.Error()})
+		}
+		existing.Filters = filters
 	}
 
 	updatedCollection, err := config.CollectionRepository.Update(existing)
@@ -185,10 +224,16 @@ func (config *CollectionConfig) UpdateHandler(w http.ResponseWriter, r *http.Req
 		return
 	}
 
+	var newFilters map[string]any
+	errUnmarshal := json.Unmarshal(updatedCollection.Filters, newFilters)
+	if errUnmarshal != nil {
+		render.JSON(w, r, map[string]string{"Error": "failed to parse new filters value" + errUnmarshal.Error()})
+	}
+
 	res := CollectionResponse{
 		UserId:  updatedCollection.UserId,
 		Name:    updatedCollection.Name,
-		Filters: updatedCollection.Filters,
+		Filters: newFilters,
 	}
 
 	render.Status(r, http.StatusOK)
@@ -198,14 +243,14 @@ func (config *CollectionConfig) UpdateHandler(w http.ResponseWriter, r *http.Req
 // DeleteHandler godoc
 // @Summary      Delete a collection
 // @Description  Deletes a collection from the database by its ID
-// @Tags         Collection
+// @Tags         Collections
 // @Produce      json
 // @Param        id   path      string  true  "Collection ID"
 // @Security     BearerAuth
 // @Success      200  {object}  map[string]string  "Collection deleted successfully"
 // @Failure      404  {object}  map[string]string  "Collection not found !"
 // @Failure      500  {object}  map[string]string  "Failed to delete Collection !"
-// @Router       /collection/{id} [delete]
+// @Router       /collections/{id} [delete]
 func (config *CollectionConfig) DeleteHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
